SEO responsive fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11686,12 +11686,6 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDEy {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDEz {}
-.bd-layoutbox-13 {
-  height: 300px;
-  background-color: #ededed;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDEz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDE1 {}
 @media (max-width: 767px) {
   .bd-layoutbox-15 {
@@ -11739,12 +11733,6 @@ a.bd-backtotop-1:hover {
   text-align: center;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIx {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIy {}
-.bd-layoutbox-22 {
-  height: 300px;
-  background-color: #ededed;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDIz {}
 .bd-layoutbox-23 {
   margin-bottom: -21px;
@@ -11771,6 +11759,12 @@ a.bd-backtotop-1:hover {
   text-align: center;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI3 {}
+.bd-layoutbox-27 {
+  height: 300px;
+  background-color: #ededed;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI4 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDI5 {}
@@ -11795,16 +11789,23 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMw {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMy {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMy {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMz {}
-.bd-layoutbox-33 {
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMx {}
+.bd-layoutbox-31 {
   height: 300px;
   background-color: #ededed;
 }
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMz {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMy {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDMy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM0 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM1 {}
+.bd-layoutbox-35 {
+  height: 300px;
+  background-color: #ededed;
+  margin-bottom: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM2 {}
 @media (max-width: 767px) {
   .bd-layoutbox-36 {
@@ -11848,12 +11849,6 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM3 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM4 {}
-.bd-layoutbox-38 {
-  height: 300px;
-  background-color: #ededed;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM4 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM5 {}
 .bd-layoutbox-39 {
   position: relative;
@@ -11863,16 +11858,25 @@ a.bd-backtotop-1:hover {
   text-align: justify;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDM5 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQw {}
+.bd-layoutbox-40 {
+  height: 300px;
+  background-color: #ededed;
+  margin-bottom: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQx {}
 .bd-layoutbox-41 {
   height: 300px;
   background-color: #ededed;
+  margin-bottom: 10px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQy {}
 .bd-layoutbox-42 {
   height: 300px;
   background-color: #ededed;
+  margin-bottom: 10px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDQz {}
@@ -12287,6 +12291,43 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjEy {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjEz {}
+.bd-layoutcontainer-13 > .bd-container-inner > .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-64 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-64 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-50 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-50 {
+    margin-bottom: 10px;
+  }
+}
+.bd-layoutcolumn-48 {
+  position: relative;
+}
+@media (max-width: 767px) {
+  .bd-layoutcolumn-48 {
+    margin-bottom: 10px;
+  }
+}
+.bd-layoutcolumn-46 {
+  position: relative;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjEz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjE0 {}
 .bd-layoutcontainer-14 > .bd-container-inner > .container-fluid:after {
   display: none;
@@ -12315,8 +12356,33 @@ a.bd-backtotop-1:hover {
   padding-left: 0;
   padding-right: 0;
 }
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-51 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-51 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-52 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-52 {
+    margin-bottom: 10px;
+  }
+}
 .bd-layoutcolumn-62 {
   position: relative;
+}
+@media (max-width: 767px) {
+  .bd-layoutcolumn-62 {
+    margin-bottom: 10px;
+  }
 }
 .bd-layoutcolumn-63 {
   position: relative;
@@ -12685,18 +12751,6 @@ a.bd-backtotop-1:hover {
   text-align: center;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjg {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjk {}
-.bd-layoutcontainer-9 > .bd-container-inner > .container-fluid {
-  padding-left: 0;
-  padding-right: 0;
-}
-.bd-layoutcolumn-53 {
-  position: relative;
-}
-.bd-layoutcolumn-54 {
-  position: relative;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjk {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xMg {}
 .bd-linkbutton-12 {
   float: right;
@@ -13845,8 +13899,6 @@ h2.bd-postheader-5 a {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMg {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMw {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xMw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xNA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xNA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb24xNQ {}
@@ -14360,6 +14412,33 @@ h2.bd-postheader-5 a {
   color: #777777;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjEy {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjEz {}
+.bd-separator-13 {
+  padding: 10px 0px;
+}
+.bd-separator-13 .bd-separator-inner {
+  width: 75%;
+}
+.bd-separator-13 .bd-separator-inner:before,
+.bd-separator-13 .bd-separator-inner:after {
+  border-top: 1px solid #dddddd;
+}
+.bd-separator-content-80 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.bd-separator-content-80 {
+  color: #777777;
+}
+.bd-imagelink-7 {
+  display: inline-block;
+}
+.bd-imagelink-7 img {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjEz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjI {}
 .bd-separator-2 {
   padding: 10px 0px;
@@ -14428,33 +14507,6 @@ h2.bd-postheader-5 a {
   color: #777777;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjM {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjQ {}
-.bd-separator-4 {
-  padding: 10px 0px;
-}
-.bd-separator-4 .bd-separator-inner {
-  width: 75%;
-}
-.bd-separator-4 .bd-separator-inner:before,
-.bd-separator-4 .bd-separator-inner:after {
-  border-top: 1px solid #dddddd;
-}
-.bd-separator-content-76 {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-.bd-separator-content-76 {
-  color: #777777;
-}
-.bd-imagelink-2 {
-  display: inline-block;
-}
-.bd-imagelink-2 img {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjU {}
 .bd-separator-5 {
   padding: 10px 0px;
@@ -14857,6 +14909,12 @@ h2.bd-postheader-5 a {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhMg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhNA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRhcmVhNA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwMA {}
+.bd-textblock-100 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwMA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwMg {}
 .bd-textblock-102 {
   margin: 0px;
@@ -14867,22 +14925,16 @@ h4.bd-textblock-102 {
   text-align: right;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwMg {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwMw {}
-.bd-textblock-103 {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwMw {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwNA {}
-.bd-textblock-104 {
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwNQ {}
+.bd-textblock-105 {
   margin: 10px;
 }
-h2.bd-textblock-104 {
+h2.bd-textblock-105 {
   line-height: 25.71428572px;
   color: #858585;
   font-size: 18px;
 }
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwNA {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwNQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazEwNw {}
 .bd-textblock-107 {
   margin-right: 10px;
@@ -15187,6 +15239,22 @@ h2.bd-textblock-146 {
   font-size: 18px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0Ng {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0Nw {}
+.bd-textblock-147 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE0Nw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE1MQ {}
+.bd-textblock-151 {
+  margin: 10px;
+}
+h2.bd-textblock-151 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE1MQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE1Mw {}
 .bd-textblock-153 {
   margin-top: 17px;
@@ -15250,6 +15318,33 @@ h4.bd-textblock-16 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2MA {}
+.bd-textblock-160 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+@media (max-width: 991px) {
+  .bd-textblock-160 {
+    display: block;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2MA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2Mw {}
+.bd-textblock-163 {
+  margin: 10px;
+}
+h2.bd-textblock-163 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2Mw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2NQ {}
+.bd-textblock-165 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2NQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE2OA {}
 .bd-textblock-168 {
   margin-top: 0px;
@@ -15811,16 +15906,6 @@ h2.bd-textblock-31 {
   font-style: italic;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM0 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1 {}
-.bd-textblock-35 {
-  margin: 10px;
-}
-h2.bd-textblock-35 {
-  line-height: 25.71428572px;
-  color: #858585;
-  font-size: 18px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM2 {}
 .bd-textblock-36 {
   height: 100%;
@@ -15846,12 +15931,6 @@ h2.bd-textblock-35 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM2 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM4 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM5 {}
-.bd-textblock-39 {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazM5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazQw {}
 .bd-textblock-40 {
   margin-top: 17px;
@@ -16192,12 +16271,6 @@ h2.bd-textblock-7 {
   font-weight: bold;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgw {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgx {}
-.bd-textblock-81 {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgy {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgz {}
@@ -16209,16 +16282,6 @@ h2.bd-textblock-7 {
   font-weight: bold;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazgz {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg0 {}
-.bd-textblock-84 {
-  margin: 10px;
-}
-h2.bd-textblock-84 {
-  line-height: 25.71428572px;
-  color: #858585;
-  font-size: 18px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg0 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg1 {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg2 {}
@@ -16226,6 +16289,16 @@ h2.bd-textblock-84 {
   margin-bottom: 24px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg3 {}
+.bd-textblock-87 {
+  margin: 10px;
+}
+h2.bd-textblock-87 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazg4 {}
 .bd-textblock-88 {
   height: 100%;
@@ -16318,12 +16391,6 @@ h4.bd-textblock-9 {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk1 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk3 {}
-.bd-textblock-97 {
-  margin-right: 10px;
-  margin-left: 10px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk4 {}
 .bd-textblock-98 {
   margin: 0px;
@@ -16334,16 +16401,6 @@ h3.bd-textblock-98 {
   text-align: right;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk4 {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk5 {}
-.bd-textblock-99 {
-  margin: 10px;
-}
-h2.bd-textblock-99 {
-  line-height: 25.71428572px;
-  color: #858585;
-  font-size: 18px;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazk5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXZpZGVvMg {}
 .bd-video-2 {
   display: block !important;
@@ -16990,7 +17047,7 @@ a.bd-itemremovelink-1:hover {
     float: none;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .bd-hmenu-1 .bd-menuitem-36:hover > .bd-menu-39-popup,
   .bd-hmenu-1 .bd-menuitem-38:hover > .bd-menu-39-popup,
   .bd-hmenu-1 .bd-menuitem-52:hover > .bd-menu-39-popup,
@@ -17000,7 +17057,7 @@ a.bd-itemremovelink-1:hover {
     pointer-events: auto;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .bd-hmenu-1 {
     /* since 3.1.0 */
   }
@@ -18481,7 +18538,7 @@ html[dir="ltr"] [data-responsive-menu="false"] .bd-horizontalmenu-70 .bd-menuite
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .bd-hmenu-1 .collapse-button {
     display: none;
   }
