SEO page responsive fix
also added static home banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12002,6 +12002,42 @@ a.bd-backtotop-1:hover {
   text-align: center;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDUy {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDUz {}
+.bd-layoutbox-53 {
+  width: auto;
+  right: 0;
+  top: 50%;
+  position: absolute;
+  -webkit-transform: translateX(0) translateY(-50%);
+  -moz-transform: translateX(0) translateY(-50%);
+  -ms-transform: translateX(0) translateY(-50%);
+  transform: translateX(0) translateY(-50%);
+}
+@media (max-width: 1199px) {
+  .bd-layoutbox-53 {
+    top: 46%;
+    height: 80%;
+    width: 80%;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutbox-53 {
+    height: 80%;
+    width: 100%;
+    top: 50%;
+  }
+}
+@media (max-width: 767px) {
+  .bd-layoutbox-53 {
+    width: 100%;
+    left: 0.000%;
+    right: 0.000%;
+    height: 100%;
+    margin-bottom: 50px;
+    margin-top: 50px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDUz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDU0 {}
 .bd-layoutbox-54 {
   background-color: #f2f2f2;
@@ -12976,6 +13012,66 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMg {}
+@media (max-width: 991px) {
+  .bd-linkbutton-22 {
+    margin-top: -39px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-linkbutton-22 {
+    margin-top: -29px;
+  }
+}
+.bd-button-67 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-67 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-67,
+.bd-button-67:link,
+.bd-button-67:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 14px;
+  background-color: #858585;
+  font-weight: 600;
+  padding: 12px 30px;
+  line-height: 20.00000001px;
+  background-image: none;
+}
+.bd-button-67:hover,
+.bd-button-67:focus {
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #333333;
+  background-image: none;
+}
+.bd-button-67:active {
+  background-color: #ffffff;
+  color: #333333;
+  border: 2px solid rgba(0, 0, 0, 0);
+  background-image: none;
+}
+.bd-icon-49:before {
+  visibility: hidden;
+}
+.bd-icon-49:before {
+  color: #858585;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yNQ {}
 .bd-linkbutton-25 {
   margin-bottom: 18px;
@@ -14324,6 +14420,104 @@ h2.bd-postheader-5 a {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb240OQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb241 {}
+.bd-section-5 {
+  background-color: #ffffff;
+  background-image: url(../../assets/images/cdcc9579474acad4fd7e3e1a7cc1dda3MarketingSupport_compressed.jpg);
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-position: center top;
+  background-size: cover;
+  height: 100vh;
+  padding-right: 5em;
+  padding-left: 5em;
+}
+@media (max-width: 1199px) {
+  .bd-section-5 {
+    padding-right: 2em;
+    height: 80vh;
+  }
+}
+@media (max-width: 991px) {
+  .bd-section-5 {
+    padding-bottom: 4em;
+    padding-top: 4em;
+  }
+}
+@media (max-width: 767px) {
+  .bd-section-5 {
+    height: 80vh;
+    padding: 0px 1em;
+  }
+}
+.bd-section-5 {
+  line-height: 28.5px;
+  color: #ffffff;
+  font-size: 19px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-align: right;
+}
+.bd-section-5 h2 {
+  line-height: 41.4px;
+  font-weight: 300;
+  font-size: 36px;
+}
+.bd-section-5 h1 {
+  line-height: 90px;
+  text-transform: uppercase;
+  font-size: 90px;
+  color: #ffffff;
+  font-weight: 300;
+  letter-spacing: -2px;
+}
+@media (max-width: 991px) {
+  .bd-section-5 {
+    line-height: 24px;
+    font-size: 16px;
+  }
+  .bd-section-5 h2 {
+    line-height: 36px;
+    font-size: 30px;
+  }
+  .bd-section-5 h1 {
+    line-height: 86.4px;
+    font-size: 72px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-section-5 h1 {
+    line-height: 68.57142859px;
+    font-size: 48px;
+  }
+}
+.bd-section-5 {
+  position: relative;
+}
+@media (max-width: 767px) {
+  .bd-section-5 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+.bd-textureoverlay-2:before {
+  background-color: #000000;
+  opacity: 0.17;
+}
+.bd-parallax-bg-effect > .bd-section-5 {
+  background-color: transparent;
+  z-index: 0;
+}
+.bd-parallaxbackground-2 {
+  position: relative;
+}
+@media (max-width: 767px) {
+  .bd-parallaxbackground-2 {
+    margin-top: -14px;
+    margin-bottom: 1px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb241 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlY3Rpb242 {}
 .bd-section-6 {
   height: 150px;
@@ -14711,6 +14905,11 @@ h2.bd-postheader-5 a {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjEw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjEx {}
+.bd-spacer-11 {
+  height: 2em;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjEx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjEy {}
 .bd-spacer-12 {
   height: 48px;
@@ -15481,8 +15680,63 @@ h4.bd-textblock-173 {
   color: #ffffff;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Mw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3NQ {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3NQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Ng {}
+.bd-textblock-176 {
+  margin-top: 10px;
+}
+@media (max-width: 767px) {
+  .bd-textblock-176 {
+    margin: 0px;
+    padding: 0px;
+  }
+}
+@media (max-width: 1199px) {
+  h2.bd-textblock-176 {
+    line-height: 117.14285718px;
+    font-size: 82px;
+    color: #ffffff;
+    text-transform: uppercase;
+  }
+}
+@media (max-width: 991px) {
+  h2.bd-textblock-176 {
+    line-height: 102.85714289px;
+    font-size: 72px;
+  }
+}
+@media (max-width: 767px) {
+  h2.bd-textblock-176 {
+    line-height: 60px;
+    font-size: 60px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Ng {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Nw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3Nw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3OA {}
+@media (max-width: 991px) {
+  .bd-textblock-178 {
+    margin-top: 0px;
+  }
+}
+@media (max-width: 767px) {
+  .bd-textblock-178 {
+    margin-bottom: 2px;
+    margin-top: 8px;
+  }
+}
+h2.bd-textblock-178 {
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  h2.bd-textblock-178 {
+    line-height: 28.57142858px;
+    font-size: 20px;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE3OA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazE4 {}
 .bd-textblock-18 {
   margin-bottom: 19px;
