Content Marketing page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11288,6 +11288,8 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTc {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTg {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTk {}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTk {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mw {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50NA {}
@@ -12231,6 +12233,43 @@ a.bd-backtotop-1:hover {
   text-align: center;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc1 {}
+.bd-layoutbox-75 {
+  height: 300px;
+  background-color: #ffffff;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc1 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc2 {}
+.bd-layoutbox-76 {
+  height: 300px;
+  background-color: #ffffff;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc3 {}
+.bd-layoutbox-77 {
+  height: 300px;
+  background-color: #ffffff;
+  margin-bottom: 10px;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc3 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc4 {}
+.bd-layoutbox-78 {
+  height: 300px;
+  background-color: #ffffff;
+  margin-bottom: 10px;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc4 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc5 {}
+.bd-layoutbox-79 {
+  height: 300px;
+  background-color: #ffffff;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDc5 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDg {}
 .bd-layoutbox-8 {
   overflow: hidden;
@@ -12243,6 +12282,29 @@ a.bd-backtotop-1:hover {
   }
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgw {}
+.bd-layoutbox-80 {
+  height: 300px;
+  background-color: #ffffff;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgx {}
+.bd-layoutbox-81 {
+  height: 300px;
+  background-color: #ffffff;
+  margin-bottom: 10px;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgy {}
+.bd-layoutbox-82 {
+  height: 300px;
+  background-color: #ffffff;
+  margin-bottom: 10px;
+  border-left: 4px solid #57d175;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGJveDgy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjEw {}
 .bd-layoutcontainer-10 > .bd-container-inner > .container-fluid {
   padding-left: 0;
@@ -12597,6 +12659,43 @@ a.bd-backtotop-1:hover {
   padding-right: 0;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjMx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjMy {}
+.bd-layoutcontainer-32 > .bd-container-inner > .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-110 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-110 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-109 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-109 {
+    margin-bottom: 10px;
+  }
+}
+.bd-layoutcolumn-100 {
+  position: relative;
+}
+@media (max-width: 767px) {
+  .bd-layoutcolumn-100 {
+    margin-bottom: 10px;
+  }
+}
+.bd-layoutcolumn-99 {
+  position: relative;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjMy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjMz {}
 .bd-layoutcontainer-33 > .bd-container-inner > .container-fluid {
   padding-left: 0;
@@ -12630,6 +12729,49 @@ a.bd-backtotop-1:hover {
   padding-right: 0;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjM2 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjM3 {}
+.bd-layoutcontainer-37 > .bd-container-inner > .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+.bd-layoutcontainer-37 {
+  margin-top: 0;
+}
+.bd-containereffect-37 {
+  margin-top: 39px;
+}
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-134 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-134 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 1199px) {
+  .bd-layoutcolumn-131 {
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 991px) {
+  .bd-layoutcolumn-131 {
+    margin-bottom: 10px;
+  }
+}
+.bd-layoutcolumn-130 {
+  position: relative;
+}
+@media (max-width: 767px) {
+  .bd-layoutcolumn-130 {
+    margin-bottom: 10px;
+  }
+}
+.bd-layoutcolumn-127 {
+  position: relative;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjM3 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxheW91dGNvbnRhaW5lcjM5 {}
 .bd-layoutcontainer-39 {
   margin-top: 61px;
@@ -14641,6 +14783,33 @@ h2.bd-postheader-5 a {
   height: 100%;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjEz {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjE1 {}
+.bd-separator-15 {
+  padding: 10px 0px;
+}
+.bd-separator-15 .bd-separator-inner {
+  width: 75%;
+}
+.bd-separator-15 .bd-separator-inner:before,
+.bd-separator-15 .bd-separator-inner:after {
+  border-top: 1px solid #dddddd;
+}
+.bd-separator-content-84 {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.bd-separator-content-84 {
+  color: #777777;
+}
+.bd-imagelink-11 {
+  display: inline-block;
+}
+.bd-imagelink-11 img {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjE1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNlcGFyYXRvcjI {}
 .bd-separator-2 {
   padding: 10px 0px;
@@ -14928,6 +15097,11 @@ h2.bd-postheader-5 a {
   height: 48px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE0 {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE1 {}
+.bd-spacer-15 {
+  height: 100px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE1 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXNwYWNlcjE2 {}
 .bd-spacer-16 {
   height: 48px;
@@ -15881,6 +16055,163 @@ h1.bd-textblock-190 {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIx {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMA {}
+.bd-textblock-210 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMQ {}
+.bd-textblock-211 {
+  margin: 10px;
+}
+h2.bd-textblock-211 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMg {}
+.bd-textblock-212 {
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 20px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMw {}
+.bd-textblock-213 {
+  margin: 10px;
+}
+h2.bd-textblock-213 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxMw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNA {}
+.bd-textblock-214 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNQ {}
+.bd-textblock-215 {
+  margin: 10px;
+}
+h2.bd-textblock-215 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNg {}
+.bd-textblock-216 {
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 20px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNw {}
+.bd-textblock-217 {
+  margin: 10px;
+}
+h2.bd-textblock-217 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxNw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxOA {}
+.bd-textblock-218 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxOA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxOQ {}
+.bd-textblock-219 {
+  margin: 10px;
+}
+h2.bd-textblock-219 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIxOQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMA {}
+.bd-textblock-220 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+@media (max-width: 991px) {
+  .bd-textblock-220 {
+    display: block;
+  }
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMQ {}
+.bd-textblock-221 {
+  margin: 10px;
+}
+h2.bd-textblock-221 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMg {}
+.bd-textblock-222 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMw {}
+.bd-textblock-223 {
+  margin: 10px;
+}
+h2.bd-textblock-223 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyMw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNA {}
+.bd-textblock-224 {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNA {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNQ {}
+.bd-textblock-225 {
+  margin: 10px;
+}
+h2.bd-textblock-225 {
+  line-height: 25.71428572px;
+  color: #858585;
+  font-size: 18px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNg {}
+.bd-textblock-226 {
+  height: 100%;
+  padding: 0px;
+}
+.bd-textblock-226 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.bd-containereffect-38 {
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNw {}
+.bd-textblock-227 {
+  margin-bottom: 0;
+}
+.bd-containereffect-39 {
+  margin-bottom: 0px;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIyNw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIz {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIz {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazIzNA {}
@@ -16147,7 +16478,7 @@ h2.bd-textblock-31 {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMx {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMy {}
 .bd-textblock-32 {
-  height: 55px;
+  height: 100%;
   padding: 0px;
 }
 .bd-textblock-32 {
@@ -16156,7 +16487,7 @@ h2.bd-textblock-31 {
 }
 .bd-containereffect-21 {
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMy {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLXRleHRibG9jazMz {}
