Changed services wording and http fix

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1,8 +1,8 @@
 #marker-start-L2Jvb3RzdHJhcC5jc3M.Lw {}
 /*!
- * Bootstrap v3.1.1 (http://getbootstrap.com)
+ * Bootstrap v3.1.1 (//getbootstrap.com)
  * Copyright 2013 Twitter, Inc.
- * Licensed under http://www.apache.org/licenses/LICENSE-2.0
+ * Licensed under //www.apache.org/licenses/LICENSE-2.0
  */
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
