--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,8 +377,8 @@ input[type="color"].input-lg {
 #marker-end-L3N0eWxlLmNzcw.L3Byb3RvdHlwZXMvQWxlcnRzTWl4aW4 {}
 #marker-start-L3N0eWxlLmNzcw.L3Byb3RvdHlwZXMvQW5pbWF0aW9uQ29yZUNvbW1vbg {}
 /*!
-Animate.css - http://daneden.me/animate
-Licensed under the MIT license - http://opensource.org/licenses/MIT
+Animate.css - //daneden.me/animate
+Licensed under the MIT license - //opensource.org/licenses/MIT
 Copyright (c) 2015 Daniel Eden
 */
 .animated {
